force-app/main/default/objects/Event__c/fields/Event_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Event_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Organizer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organized_Events</relationshipName>
    <type>Lookup</type>
</CustomField>