force-app/main/default/objects/Event__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current Students</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Prospective Students</fullName>
            </value>
            <value>
                <fullName>Industry Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>