force-app/main/default/objects/Event__c/validationRules/Event_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Date_Validation</fullName>
    <active>true</active>
    <description>Ensures event start date is in the future for new events</description>
    <errorConditionFormula>AND(ISNEW(), Start_Date_Time__c &lt; NOW())</errorConditionFormula>
    <errorDisplayField>Start_Date_Time__c</errorDisplayField>
    <errorMessage>Event start date must be in the future</errorMessage>
</ValidationRule>